# autonomous-navigation

./: .gitignore  README.md  autonomous-navigation.code-workspace
STM32F4-driver-library/sources/tools/: tools.d
TerraPilot/autopilot/boat/: boat.cpp  boat.h  boat_thread_comms.cpp  boat_thread_main.cpp  boat_thread_timers.cpp
TerraPilot/autopilot/system/: rtos.h  system_config_template.h  system_tools.h
TerraPilot/autopilot/templates/: system_config_template.h
TerraPilot/autopilot/vehicle/: control.cpp  control.h  hardware.h  memory.cpp  memory.h  navigation.cpp  navigation.h  telemetry.cpp  telemetry.h  vehicle.cpp  vehicle.h
TerraPilot/boat/: boat.cpp  boat.h  boat_thread_comms.cpp  boat_thread_main.cpp  boat_thread_timers.cpp
TerraPilot/stm32f4-boat/: CMakeLists.txt
TerraPilot/stm32f4-boat/core/: main.cpp  stm32f4xx_hal_msp.c
TerraPilot/stm32f4-boat/hardware/: device_config.c  device_config.h  hardware.cpp  hardware_config_template.h
TerraPilot/stm32f4-boat/headers/boat/: boat_utest.h
TerraPilot/stm32f4-boat/headers/boat/modules/: boat_nav.h
TerraPilot/stm32f4-boat/headers/config_files/devices/: mpu6050_config.h
TerraPilot/stm32f4-boat/headers/config_files/system/: vehicle_radio_config.h
TerraPilot/stm32f4-boat/headers/core/: stm32f4xx_it.h
TerraPilot/stm32f4-boat/headers/ground_station/: ground_station.h
TerraPilot/stm32f4-boat/headers/includes/: includes_drivers.h
TerraPilot/stm32f4-boat/includes/: includes_cpp_drivers.h
TerraPilot/stm32f4-boat/sources/: hardware.cpp
TerraPilot/stm32f4-boat/sources/boat/modules/: boat_rc.cpp
TerraPilot/stm32f4-boat/sources/boat/threads/: boat_main.cpp
TerraPilot/stm32f4-boat/sources/config_files/devices/: esc_config.c  ws2812_config.c
TerraPilot/stm32f4-boat/sources/core/: stm32f4xx_it.c  stm32f4xx_setup.c
TerraPilot/stm32f4-boat/sources/ground_station/: ground_station_setup.cpp
TerraPilot/stm32f4-boat/superseded/headers/boat/modules/: boat_rc.h
TerraPilot/stm32f4-boat/superseded/headers/config_files/devices/: esc_config.h  lsm303agr_config.h
TerraPilot/stm32f4-boat/superseded/headers/system_data/: gps_coordinates.h
TerraPilot/stm32f4-boat/superseded/sources/boat/: boat_setup.cpp
TerraPilot/stm32f4-boat/superseded/sources/boat/modules/: boat_nav.cpp  boat_radio.cpp  boat_rc.cpp
TerraPilot/system/: FreeRTOSConfig.h  includes.h  rtos.h  system_tools.h
TerraPilot/templates/: hardware_template.cpp  system_config_template.h
TerraPilot/unit_tests/boat/: makefile
TerraPilot/unit_tests/boat_old/: makefile
TerraPilot/unit_tests/ground_station/: makefile
TerraPilot/unit_tests/vehicle/: makefile
TerraPilot/vehicle/: auxiliary.h  control.cpp  hardware.h  memory.cpp  memory.h  navigation.cpp  navigation.h  telemetry.cpp  telemetry.h  vehicle.cpp  vehicle.h
TerraPlanner/: main.py
auto_nav/: CMakeLists.txt
auto_nav/Core/Inc/: main.h  stm32f4xx_it.h
auto_nav/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
auto_nav/autopilot/boat/: boat.cpp  boat.h  boat_mavlink.h  boat_thread_comms.cpp  boat_thread_main.cpp  boat_thread_timers.cpp
auto_nav/autopilot/system/: FreeRTOSConfig.h  includes.h  rtos.cpp  rtos.h  system_config_template.h  system_tools.h
auto_nav/autopilot/vehicle/: auxiliary.h  control.h  hardware.h  memory.cpp  memory.h  navigation.cpp  navigation.h  telemetry.cpp  telemetry.h  vehicle.cpp  vehicle.h  vehicle_config.h  vehicle_config_template.h  vehicle_hardware.h  vehicle_mavlink.h
auto_nav/headers/: includes_drivers.h  int_handlers.h
auto_nav/headers/boat/: ab_app.h  ab_includes_app.h  ab_init.h  ab_interface.h  ab_led_colours.h  boat.h  boat_app.h  boat_init.h  boat_utest.h
auto_nav/headers/config_files/: FreeRTOSConfig.h  lsm303agr_config.h  m8q_config.h  nrf24l01_config.h  ws2812_config.h
auto_nav/headers/core/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32f4xx_setup.h  system_config_template.h  system_settings.h
auto_nav/headers/ground_station/: ground_station.h  gs_app.h  gs_includes_app.h  gs_init.h  gs_interface.h
auto_nav/headers/includes/: includes_cpp_drivers.h  includes_drivers.h
auto_nav/headers/modules/: nav_module.h  radio_module.h
auto_nav/headers/system_data/: gps_coordinates.h
auto_nav/sources/: int_handlers.c
auto_nav/sources/boat/: ab_app.cpp  ab_init.cpp  ab_led_colours.cpp  boat_app.cpp  boat_init.cpp  boat_setup.cpp
auto_nav/sources/core/: main.c  (+5 more)
auto_nav/stm32f4-boat/: CMakeLists.txt  Makefile
auto_nav/stm32f4-boat/headers/config_files/devices/: esc_config.h  mpu6050_config.h  nrf24l01_config.h
auto_nav/stm32f4-boat/headers/config_files/system/: gs_interface_config.h
auto_nav/stm32f4-boat/headers/core/: system_config.h
auto_nav/stm32f4-boat/headers/includes/: includes_drivers.h
auto_nav/stm32f4-boat/headers/system_data/: gps_coordinates.h
auto_nav/stm32f4-boat/sources/: hardware.cpp  vehicle_hardware.cpp
auto_nav/stm32f4-boat/sources/boat/: boat_setup.cpp
auto_nav/stm32f4-boat/sources/boat/modules/: boat_nav.cpp  boat_radio.cpp
auto_nav/stm32f4-boat/sources/config_files/system/: gs_interface_config.cpp  vehicle_radio_config.cpp
auto_nav/stm32f4-boat/sources/core/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_setup.c
auto_nav/stm32f4-boat/sources/system_data/: gps_coordinates.cpp
boat/: CMakeLists.txt  README.md
boat/headers/: ab_app.h  ab_init.h  includes_app.h  includes_drivers.h  int_handlers.h
boat/sources/: ab_app.cpp  ab_init.cpp
great-circle-simulation/: trajectory_calculation.py  waypoint_mission.py
ground_station/: CMakeLists.txt  README.md
ground_station/headers/: gs_app.h  gs_init.h
ground_station/sources/: gs_app.cpp  gs_init.cpp
mission_planning/: mission_planning.py
mission_planning/scripts/: mission_creation.py
simulation/: simulation.py  trajectory_calculations.py  trilateration.py
simulation/calculations/: heading_variations.py  trajectory_calculation.py
simulation/gui/: main.py
simulation/pc-scripts/: geoplaner.py  waypoint_mission.py
simulation/sample_data/: subnautica.py
simulation/scripts/: trajectory_calculations.py  user_interface.py
(+193 files in other folders)
